@@ -117,6 +117,7 @@ int main(int argc_, char *argv_[])
     char cmd[PATH_MAX + 1], buf[PATH_MAX + 8], buf2[1100], *p;
     int i, i0 = 0, ac = 0, res = 0, e_mode = 0, set_dp = 0;
     char **av;
+    int have_cmdarg_default_packages = 0;
 
     if (argc_ <= 1)
     {
@@ -284,6 +285,8 @@ int main(int argc_, char *argv_[])
                 fprintf(stderr, "unable to set R_DEFAULT_PACKAGES\n");
                 exit(1);
             }
+            else
+                have_cmdarg_default_packages = 1;
             i0 = i;
             continue;
         }
@@ -316,19 +319,23 @@ int main(int argc_, char *argv_[])
     }
     av[ac] = (char *)NULL;
 #ifdef HAVE_PUTENV
-    /* If provided, R_SCRIPT_DEFAULT_PACKAGES takes precedence
+    /* If provided, and default packages are not specified on the
+       command line, then R_SCRIPT_DEFAULT_PACKAGES takes precedence
        over R_DEFAULT_PACKAGES. */
-    char *rdpvar = "R_DEFAULT_PACKAGES";
-    char *rsdp = getenv("R_SCRIPT_DEFAULT_PACKAGES");
-    if (rsdp && strlen(rdpvar) + strlen(rsdp) + 1 < sizeof(buf2))
+    if (!have_cmdarg_default_packages)
     {
-        snprintf(buf2, sizeof(buf2), "%s=%s", rdpvar, rsdp);
-        putenv(buf2);
+        char *rdpvar = "R_DEFAULT_PACKAGES";
+        char *rsdp = getenv("R_SCRIPT_DEFAULT_PACKAGES");
+        if (rsdp && strlen(rdpvar) + strlen(rsdp) + 1 < sizeof(buf2))
+        {
+            snprintf(buf2, sizeof(buf2), "%s=%s", rdpvar, rsdp);
+            putenv(buf2);
+        }
     }
 
     p = getenv("R_SCRIPT_LEGACY");
-    // int legacy = (p && (strcmp(p, "yes") == 0)) ? 1 : 0;
-    int legacy = (p && (strcmp(p, "no") == 0)) ? 0 : 1;
+    int legacy = (p && (strcmp(p, "yes") == 0)) ? 1 : 0;
+    // int legacy = (p && (strcmp(p, "no") == 0)) ? 0 : 1;
     if (legacy && !set_dp && !getenv("R_DEFAULT_PACKAGES"))
         putenv("R_DEFAULT_PACKAGES=datasets,utils,grDevices,graphics,stats");
 
